tests/fails/veclit.t
import "ebb"
local R = L.NewRelation { name="R", size=5 }

local ebb vk (v : R)
    var v = { }
end
R:foreach(vk)
